# prediction-of-complexation-onstants-and-binding-free-energies-of-bheta-cyclodextrins

./: .env  pyproject.toml
inputs/data/: CDEnrichedData.csv  CDRawData.csv  NewCDData.csv  NewCDMergedData.csv
inputs/data/clean/: dataset_with_vec.csv  dataset_with_vec.parquet  dataset_with_vec_expanded_scaled.csv  dataset_with_vec_expanded_scaled.parquet  dataset_without_vec.csv  dataset_without_vec.parquet  dataset_without_vec_expanded_scaled.csv  dataset_without_vec_expanded_scaled.parquet
outputs/analiza/: df_with_vecs_stats.md  with_vecs_top_correlations.md  without_vecs_top_correlations.md
outputs/analiza_hmbfr/with_vecs_new/: compressed_sample_stats.csv  cumulative_share_first50.csv  hmbfr_feature_scores.csv  hmbfr_top100.md  model_comparison.csv  model_comparison.md
outputs/analiza_hmbfr/without_vecs_new/: compressed_sample_stats.csv  cumulative_share_first50.csv  hmbfr_feature_scores.csv  hmbfr_top100.md  model_comparison.csv  (+1 more)
outputs/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
outputs/models/: best_xgb_params_with_iso2vec.json  hgb_with_iso2vec.pkl  hgb_without-iso2vec.pkl  lgbm_with_iso2vec.pkl  lgbm_without-iso2vec.pkl  ridge_with_iso2vec.pkl  ridge_without-iso2vec.pkl  xgb_tuned_without-iso2vec.pkl  xgb_vec_with_iso2vec.pkl
outputs/models_hmbfr/: global_summary.csv
outputs/reports/: model_report.md  model_without-iso2vec_report.md
predicting-cyclodextrin-bioavailability/notebooks/: HmbFr.ipynb  Modeling_on_HmbFR.ipynb  data_cleaning.ipynb  data_cleaning_new.ipynb  modeling_with_interpretability.ipynb  utils.ipynb
(+75 files in other folders)
